# Pico-Numpad

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  pico-numpad.c  usb_descriptors.c  usb_descriptors.h
stl/: numpad - case_plate.STL  numpad - cover.STL
